[fix] fix missing margins in mobile size in home page

--- a/src/style/output.css
+++ b/src/style/output.css
@@ -793,6 +793,18 @@ body::-webkit-scrollbar {
   margin-top: 2rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
+.mt-11 {
+  margin-top: 2.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -1516,6 +1528,14 @@ body::-webkit-scrollbar {
 }
 
 @media (min-width: 640px) {
+  .sm\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .sm\:mt-16 {
+    margin-top: 4rem;
+  }
+
   .sm\:hidden {
     display: none;
   }
